<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>maven.wildfly.activemq</groupId>
        <artifactId>maven-wildfly-activemq</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>Wildfly</artifactId>
    <packaging>jar</packaging>

    <properties>
        <wildfly.extract.dirName>wildfly-8.2.0.Final</wildfly.extract.dirName>
        <wildfly.home>${project.build.directory}/${wildfly.extract.dirName}</wildfly.home>
        <wildfly.server>${wildfly.home}/standalone</wildfly.server>
        <wildfly.deployments>${wildfly.server}/deployments</wildfly.deployments>
        <wildfly.configuration>${wildfly.server}/configuration</wildfly.configuration>
        <wildfly.log>${wildfly.server}/log</wildfly.log>
        <!--<wildfly2.debug.param>-agentlib:jdwp=transport=dt_socket,address=9787,server=y,suspend=n</wildfly2.debug.param>-->
        <wildfly2.debug.param/>
        <wildfly2.port.offset>1000</wildfly2.port.offset>
        <wildfly2.port.management>10990</wildfly2.port.management>
        <wildfly.goal>start</wildfly.goal>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-wildfly</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.wildfly</groupId>
                                    <artifactId>wildfly-dist</artifactId>
                                    <version>8.2.0.Final</version>
                                    <type>zip</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                    <destFileName>${wildfly.extract.dirName}</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>delete-wildfly-standalone-configurations</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target name="delete default wildfly configuration files">
                                <delete>
                                    <fileset dir="${wildfly.configuration}" includes="standalone.xml" />
                                    <fileset dir="${wildfly.configuration}" includes="standalone-full.xml" />
                                    <fileset dir="${wildfly.configuration}" includes="standalone-full-ha.xml" />
                                    <fileset dir="${wildfly.configuration}" includes="standalone-ha.xml" />
                                </delete>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-custom-wildfly-standalone-full-configurations</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target name="copy wildfly configuration files">
                                <copy file="${project.basedir}/configuration/custom-wildfly-standalone-full.xml" tofile="${wildfly.configuration}/custom-wildfly-standalone-full.xml" />
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <configuration>
                    <jbossHome>${wildfly.home}</jbossHome>
                    <serverConfig>custom-wildfly-standalone-full.xml</serverConfig>
                    <serverArgs>
                        <serverArg>-Djboss.socket.binding.port-offset=${wildfly2.port.offset}</serverArg>
                    </serverArgs>
                    <javaOpts>
                        <javaOpt>-Xms64M</javaOpt>
                        <javaOpt>-Xmx512M</javaOpt>
                        <javaOpt>-XX:MaxPermSize=128M</javaOpt>
                        <javaOpt>${wildfly2.debug.param}</javaOpt>
                    </javaOpts>
                    <port>${wildfly2.port.management}</port>
                </configuration>
                <executions>
                    <execution>
                        <id>start-wildfly</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>${wildfly.goal}</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>